--- a/core/templates/cliente/cliente_list.html
+++ b/core/templates/cliente/cliente_list.html
@@ -48,25 +48,30 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   {% if messages %}
-  <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content">
-        <div class="modal-header justify-content-center">
-          <h5 class="modal-title" id="confirmModalLabel">CLIENTE AGREGADO</h5>
-        </div>
-        <div class="modal-footer justify-content-center">
-          <button type="button" class="btn-cerrar" data-bs-dismiss="modal">VOLVER</button>
+  {% for message in messages %}
+    {% if message.tags == "success" %}
+      <!-- Mostrar el modal SOLO si el mensaje es de tipo "success" -->
+      <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+          <div class="modal-content">
+            <div class="modal-header justify-content-center">
+              <h5 class="modal-title" id="confirmModalLabel">CLIENTE AGREGADO</h5>
+            </div>
+            <div class="modal-footer justify-content-center">
+              <button type="button" class="btn-cerrar" data-bs-dismiss="modal">VOLVER</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <script>
-    // Mostrar el modal si hay mensajes
-    var modal = new bootstrap.Modal(document.getElementById('confirmModal'));
-    modal.show();
-  </script>
-  {% endif %}
+      <script>
+        var modal = new bootstrap.Modal(document.getElementById('confirmModal'));
+        modal.show();
+      </script>
+    {% endif %}
+  {% endfor %}
+{% endif %}
+
   
 </body>
 </html>
