--- a/core/static/css/formularios.css
+++ b/core/static/css/formularios.css
@@ -12,6 +12,7 @@ form {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
   max-width: 300px;
 }
 
@@ -27,7 +28,7 @@ form {
 }
 
 .form-span {
-  border: 1px solid #626E15; /* tu color personalizado */
+  border: 1px solid #626E15; 
   border-radius: 4px;
 }
 
@@ -90,16 +91,17 @@ body {
 
 .left-column {
   float: left;
-  width: 800px;
+  width: 900px;
   padding-right: 10px;
   padding-left: 50px;
+  box-sizing: border-box;
 }
 
 .right-column {
-  position: fixed; 
-  top: 180px; 
-  right: 440px; 
-  width: 300px;
+  position: absolute; 
+  top: 100px; 
+  right: 7%; 
+  width: 34%;
   max-height: 500px;
   display: flex;
   justify-content: center;
