--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -25,12 +25,15 @@
     <div class="header-icons">
       {% if not user.is_superuser %}
       <a href="#" class="icon-container">
-        <img src="{% static 'images/campana-nuevo.png' %}" alt="Notificaciones" class="icon-container">
+        <img src="{% static 'images/campana-nuevo.png' %}" alt="Notificaciones" class="icon-container" title="Notificaciones">
       </a>
       {% endif %}
-      <a href="#" class="icon-container">
-        <img src="{% static 'images/salida.png' %}" alt="Salir" class="icon-container">
-      </a>
+      <form method="POST" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit" class="icon-container" style="background:none; border:none;" title="Cerrar sesión">
+            <img src="{% static 'images/salida.png' %}" alt="Cerrar Sesion" class="icon-container">
+        </button>
+      </form>
     </div>
   </header>
 
