--- a/core/static/css/login.css
+++ b/core/static/css/login.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #d0d0d0;
 }
 
 .login-container {
@@ -19,8 +19,9 @@ body {
     height: 500px;
     background-color: #f0f0f0;
     border-radius: 30px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+    overflow: visible;
+    border: #696f2f 2px solid; ;
 }
 
 .brand-section {
