--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,6 @@
   <title>{% block title %}Servi-Watch{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <link rel="stylesheet" href="{% static 'css/egreso_modal.css' %}">
 
   <!--Fuentes de tipografia (Google Font)-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -139,7 +138,7 @@
             </a>
           </li>
           <li class="{% if '/egreso/' in request.path or request.path == '/egreso' %} active {% endif %}">
-            <a href="{% url 'egreso' %}" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
+            <a href="#" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reportes.png' %}" alt="Egresos" class="icon">
               </span>
