--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{% block title %}Servi-Watch{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
   <!--Fuentes de tipografia (Google Font)-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +19,7 @@
   <link href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.1.1/dist/select2-bootstrap-5-theme.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="{% static 'css/formularios.css' %}">
+  <link rel="stylesheet" href="{% static 'css/ventana.css' %}">
   <link rel="stylesheet" href="{% static 'css/reparacion.css' %}">
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
@@ -37,7 +41,7 @@
     <div class="header-icons">
       {% if not user.is_superuser %}
       <a href="#" class="icon-container">
-        <img src="{% static 'images/campana-nuevo.png' %}" alt="Notificaciones" class="icon-container" title="Notificaciones">
+        <img src="{% static 'images/campana-nuevo.png' %}" alt="Notificaciones" class="icon-container">
       </a>
       {% endif %}
       <form method="POST" action="{% url 'logout' %}">
@@ -53,7 +57,7 @@
   <div class="main-container" id="sidebar">
     <!-- Sidebar izquierda -->
     <aside class="sidebar">
-      <div class="user-info {% if '/usuario' in request.path or request.path == '/admin' %} active {% endif %}">
+      <div class="user-info {% if '/edit-usuario' in request.path or request.path == '/admin' %} active {% endif %}">
         <a href="#" class="user-avatar-container">
           <div class="user-avatar">
             <img src="{% static 'images/avatar (1).png' %}" alt="Usuario" class="icon-user">
@@ -74,7 +78,7 @@
         <ul>
           {% if user.is_superuser %}
           <li class="{% if '/productos/' in request.path or request.path == '/productos' %} active {% endif %}">
-            <a href="#">
+            <a href="#" class="{% if not '/productos/' in request.path or request.path == '/productos' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reloj 1.png' %}" alt="Productos" class="icon">
               </span>
@@ -82,7 +86,7 @@
             </a>
           </li>
           <li class="{% if '/empleados/' in request.path or request.path == '/empleados' %} active {% endif %}">
-            <a href="#">
+            <a href="{% url 'empleado_list' %}" class="{% if not '/empleados/' in request.path or request.path == '/empleados' %} menu-link {% endif %}">
             <span>
               <img src="{% static 'images/clientes.png' %}" alt="Empleados" class="icon">
             </span>
@@ -91,7 +95,7 @@
             
           </li>
           <li class="{% if '/usuarios/' in request.path or request.path == '/usuarios' %} active {% endif %}">
-            <a href="#">
+            <a href="#" class="{% if not '/usuarios/' in request.path or request.path == '/usuarios' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/usuarios.png' %}" alt="Usuarios" class="icon">
               </span>
@@ -99,7 +103,7 @@
             </a>
           </li>
           <li class="{% if '/reportes/' in request.path or request.path == '/reportes' %} active {% endif %}">
-            <a href="#">
+            <a href="#" class="{% if not '/reportes/' in request.path or request.path == '/reportes' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reportes.png' %}" alt="Reportes" class="icon">
               </span>
@@ -133,8 +137,8 @@
               Gestión de servicios
             </a>
           </li>
-          <li class="{% if '/egresos/' in request.path or request.path == '/egresos' %} active {% endif %}">
-            <a href="#" class="{% if not '/egresos/' in request.path or request.path == '/egresos' %} menu-link {% endif %}">
+          <li class="{% if '/egreso/' in request.path or request.path == '/egreso' %} active {% endif %}">
+            <a href="#" class="{% if not '/egreso/' in request.path or request.path == '/egreso' %} menu-link {% endif %}">
               <span>
                 <img src="{% static 'images/reportes.png' %}" alt="Egresos" class="icon">
               </span>
@@ -153,6 +157,7 @@
       {% endblock %}
     </section>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   {% block extra_js %}
   {% endblock %}
