--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -44,9 +44,12 @@
         <img src="{% static 'images/campana-nuevo.png' %}" alt="Notificaciones" class="icon-container">
       </a>
       {% endif %}
-      <a href="#" class="icon-container">
-        <img src="{% static 'images/salida.png' %}" alt="Salir" class="icon-container">
-      </a>
+      <form method="POST" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit" class="icon-container" style="background:none; border:none;" title="Cerrar sesión">
+            <img src="{% static 'images/salida.png' %}" alt="Cerrar Sesion" class="icon-container">
+        </button>
+      </form>
     </div>
   </header>
 
